# ScholarRetriever

./: .gitignore  .readthedocs.yaml  README.md  README.rst  pyproject.toml  retrieve_author_articles.rst
docs/: requirements.txt
docs/source/: advanced_use.rst  conf.py  getting_started.rst  index.rst  installation.rst  overview.rst
docs/source/api/: modules.rst  scholar_retriever.author_parser.rst  scholar_retriever.author_retriever.rst  scholar_retriever.profile_parser.rst  scholar_retriever.profile_search.rst  scholar_retriever.rst  scholar_retriever.scholar_retriever.rst
src/examples/author_api/: author.json  retrieve_author_all.py  retrieve_author_articles.py  retrieve_author_info_print.py  retrieve_author_info_to_json.py  retrieve_coauthors_info.py
src/examples/profile_api/: pages.json  profile_search_basic.py  profile_search_json.py  profile_search_link.py  profile_search_org.py
src/scholar_retriever/: __init__.py  author_parser.py  author_retriever.py  profile_parser.py  profile_search.py  scholar_retriever.py
src/scholar_retriever/utils/: Profil.html  html_test.py  html_test_author.py  tools.py
