[build-system]
requires = ["setuptools", "requests"]
build-backend = "setuptools.build_meta"


[project]
name = "ScholarRetriever"

authors = [
  { name="Jose Guerra Carmenate", email="joseguerracarmenate@gmail.com" },
]
description = "A Python tool for efficiently extracting information from Google Scholar, including author profiles, citations, and academic papers."

requires-python = ">=3.8"

classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Education",
    "Intended Audience :: Information Technology",
    "Intended Audience :: Science/Research",
    "Natural Language :: English",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3",
    "Topic :: Education",
    "Topic :: Utilities",
    "Topic :: File Formats :: JSON",
    "Topic :: Internet",
    "Topic :: Scientific/Engineering",
    "License :: OSI Approved :: MIT License",
]

dependencies = [
    "requests",
    "beautifulsoup4",
]
dynamic = ["readme", 'version']

#[project.scripts]
#my-script = "my_package.module:function"

[project.urls]
Homepage = "https://github.com/joseguerra3000/ScholarRetriever"
Issues = "https://github.com/joseguerra3000/ScholarRetriever/issues"


[tool.setuptools.dynamic]
version = {attr = "scholar_retriever.__init__.VERSION"}
readme = {file = ["README.md", "README.rst"], content-type = "text/markdown"}

[tool.setuptools.packages.find]
where = ["src"]  # list of folders that contain the packages (["."] by default)


